@@ -18,10 +18,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Objects;
 import java.util.Spliterator;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+
+import static java.util.Objects.requireNonNullElse;
 
 /**
  * All the materials contained within the tool. Determines a portion of the modifiers, along with the stats.
@@ -47,6 +48,11 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
     return new MaterialNBT(Arrays.stream(materials).map(MaterialVariant::of).toList());
   }
 
+  /** Creates a new material NBT */
+  public static MaterialNBT of(MaterialVariant... materials) {
+    return new MaterialNBT(List.of(materials));
+  }
+
   /** Creates a builder for this NBT */
   public static Builder builder() {
     return new Builder();
@@ -69,6 +75,11 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
     return list.size();
   }
 
+  /** Checks if the internal list is empty */
+  public boolean isEmpty() {
+    return list.isEmpty();
+  }
+
   /**
    * Creates a copy of this material list with the material at the given index substituted
    * @param index        Index to replace. Can be greater than the material list size
@@ -76,7 +87,7 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
    * @return  Copy of NBt with the new material
    * @throws IndexOutOfBoundsException  If the index is invalid
    */
-  public MaterialNBT replaceMaterial(int index, MaterialVariantId replacement) {
+  public MaterialNBT replaceMaterial(int index, MaterialVariant replacement) {
     if (index < 0) {
       throw new IndexOutOfBoundsException("Material index is out of bounds");
     }
@@ -85,7 +96,7 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
     ArrayList<MaterialVariant> list = new ArrayList<>(Math.max(size, index + 1));
     for (int i = 0; i < size; i++) {
       if (i == index) {
-        list.add(MaterialVariant.of(replacement));
+        list.add(replacement);
       } else {
         list.add(this.list.get(i));
       }
@@ -97,10 +108,21 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
       for (int i = size; i < index; i++) {
         list.add(MaterialVariant.of(IMaterial.UNKNOWN, ""));
       }
-      list.add(MaterialVariant.of(replacement));
+      list.add(replacement);
     }
 
     return new MaterialNBT(list);
+  }
+
+  /**
+   * Creates a copy of this material list with the material at the given index substituted
+   * @param index        Index to replace. Can be greater than the material list size
+   * @param replacement  New material for that index
+   * @return  Copy of NBt with the new material
+   * @throws IndexOutOfBoundsException  If the index is invalid
+   */
+  public MaterialNBT replaceMaterial(int index, MaterialVariantId replacement) {
+    return replaceMaterial(index, MaterialVariant.of(replacement));
   }
 
   /**
@@ -113,16 +135,15 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
       return EMPTY;
     }
     ListTag listNBT = (ListTag) nbt;
-    if (listNBT.getElementType() != Tag.TAG_STRING) {
+    if (listNBT.getElementType() != Tag.TAG_STRING || listNBT.isEmpty()) {
       return EMPTY;
     }
 
     List<MaterialVariant> materials = listNBT.stream()
-                                             .map(tag -> MaterialVariantId.tryParse(tag.getAsString()))
-                                             .filter(Objects::nonNull)
-                                             .map(MaterialVariant::of)
-                                             .collect(Collectors.toList());
-
+      // if any material ID fails to parse (invalid string), replace with unknown
+      .map(tag -> requireNonNullElse(MaterialVariantId.tryParse(tag.getAsString()), IMaterial.UNKNOWN_ID))
+      .map(MaterialVariant::of)
+      .toList();
     return new MaterialNBT(materials);
   }
 
@@ -155,6 +176,7 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
     return list.spliterator();
   }
 
+
   /** Builder for material NBT */
   public static class Builder {
     private final ImmutableList.Builder<MaterialVariant> builder = ImmutableList.builder();
@@ -173,6 +195,17 @@ public class MaterialNBT implements Iterable<MaterialVariant> {
     /** Adds a material to the builder */
     public Builder add(IMaterial material) {
       return add(MaterialVariant.of(material));
+    }
+
+    /** Adds all materials from the given list */
+    public Builder addAll(List<MaterialVariant> existing) {
+      builder.addAll(existing);
+      return this;
+    }
+
+    /** Adds all materials from the given NBT */
+    public Builder addAll(MaterialNBT existing) {
+      return addAll(existing.list);
     }
 
     /** Builds the final list */
